[package]
name = "zpng_rs"
version = "0.1.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2018"
publish = false
license = "BSD 3-Clause"

[dependencies]
zstd = { version = "^0.5.2", features = ["zstdmt"] }
argh = "^0.1.3"

# https://github.com/rust-lang/rfcs/pull/2887
# could split this into workspaces instead
color-backtrace = { version = "*", optional = true }

[dependencies.image]
version = "^0.23.3"
default-features = false
features = ["webp", "tga", "bmp", "png", "gif", "ico", "jpeg_rayon"]

[profile.release]
# debug = true # for cargo flamegraph
lto = true
opt-level = 3

[lib]
name = "zpng_rs_lib"
path = "src/lib.rs"
# crate-type = ["cdylib", "rlib"] # for wasm experiments

[[bin]]
name = "zpng_rs"
path = "src/bin/main.rs"

[features]
ENABLE_RGB_COLOR_FILTER = []
wasm = []

default = [ "ENABLE_RGB_COLOR_FILTER", "color-backtrace" ]
